===== CHANGELOG =====
Zollern Galaxy v2.0.32
=====================

* Added Astros as a moon of Eden, the mod's first moon.
    - The moon appears in Eden's night sky.
    - Eden's SkyProvider has been adjusted to show the Astros moon in its night skies.
* Added the Andromeda galaxy.
* Added the Astros Villager.
    - Regular Alien Villagers will convert into Astros Villagers when on the moon.
* Added the Caligro Villager.
    - Regular Alien Villagers will convert into Caligro Villagers when on that planet.
* Added a config option to make this mod's custom Alien Villagers stop going "HNGH!!"
    - Does not affect the GC Alien Villagers.
* Added Eden Crystal gen to Astros.
* 
* Sugar can now be crafted into Sugar Blocks and vice versa.
* Adjusted relative orbit times and distance from center.
* Four unused star systems have been moved to the new Andromeda galaxy.
    - So far, it seems that the only way to access these is through MJRLegend's Extra Planets mod.
        - This will be tested further in the future.
* Updated Galactic HUD to interpret moons as well as planets.
* Mining tunnels will now generate on Astros.
* Fixed Purgot Dirt potentially showing up on Zollus.
* Fixed (mostly) ravines not generating correctly.
* Fixed HUD temperature not converting to Celsius from Fahrenheit when toggled in config.
    - Changed config option to True/False instead of F/C.
* 