@@ -941,6 +941,7 @@ solarsystem.nova=Nova
 
 ## Galaxies ##
 galaxy.andromeda=Andromeda
+galaxy.eissentam=Eissentam
 
 ## Space Stations ##
 
